--- a/src/TUT.css
+++ b/src/TUT.css
@@ -4,11 +4,23 @@
   color: #F5F5F5;
 }
 
-.heading {
-  font-size: 5em;
-  font-family: 'Righteous', cursive;
-  margin-top: 0vh;
-  padding-top: 5vh;
+.hero-image{
+  background-image: url("https://images.pexels.com/photos/346885/pexels-photo-346885.jpeg");
+  height: 60vh;
+  width: 110vw;
+  margin-left: -200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-body {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .about-card {
